--- a/.github/workflows/test_dynamic.yml
+++ b/.github/workflows/test_dynamic.yml
@@ -1,12 +1,11 @@
+name: Reusable workflow example
 
-on: workflow_dispatch
+on:
+  workflow_dispatch
+
 jobs:
-  codespaces:
-    runs-on:  ubuntu-latest
-    
+  example_job:
+    name: Trigger reusable workflow
+    runs-on: ubuntu-latest
     steps:
-      - name: Print Hello World
-        run: echo "Hello, world!"
-
-      - name: Try to run CMW
-        uses: github/SampleAction/.github/workflows/blank.yml@main
+      - uses: aditsrin/StarterAction/.github/workflows/blank.yml@main
