--- a/.github/workflows/test_dynamic.yml
+++ b/.github/workflows/test_dynamic.yml
@@ -4,12 +4,33 @@ on:
   release
 
 jobs:
-  example_job:
-    uses: aditsrin/StarterAction/.github/workflows/blank.yml@main
-    
-  codespaces:
+  test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
-        - name: Welcome world
-          run: echo "Hello, world!"
+      - name: Checking out!
+        uses: actions/checkout@v3
+  
+      - name: Install Oras
+        run: |
+          curl -LO https://github.com/oras-project/oras/releases/download/v0.12.0/oras_0.12.0_linux_amd64.tar.gz
+          mkdir -p oras-install/
+          tar -zxf oras_0.12.0_*.tar.gz -C oras-install/
+          mv oras-install/oras /usr/local/bin/
+          rm -rf oras_0.12.0_*.tar.gz oras-install/
+          echo "Oras installed!"
+          
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@main
+        with:
+          cosign-release: 'v1.8.0' # optional
+          
+      - name: Running action   
+        uses: ruchika-jain/package-action@1.0.1
+        id: publish-action
+        with:
+          package-name: 'ghcr-action-pkg'
 
+      - name: Signing action
+        uses: ruchika-jain/sign-package@1.0.1
+        with: 
+          package-name: ${{ steps.publish-action.outputs.package-name }}
