--- a/.github/workflows/test_dynamic.yml
+++ b/.github/workflows/test_dynamic.yml
@@ -28,7 +28,7 @@ jobs:
         uses: ruchika-jain/package-action@1.0.1
         id: publish-action
         with:
-          package-name: 'ghcr-action-pkg-JSbased'
+          package-name: 'ghcr-action-pkg-JSbasedaditsrin'
 
       - name: Signing action
         uses: ruchika-jain/sign-package@1.0.1
